#4 Refactor and enhance test coverage across modules.
Refactored test cases for clarity, consistency, and modularization using nested classes and parameterized tests. Improved coverage by adding edge cases and missing scenarios, including handling invalid URLs, exceptions, and specific conditions like empty inputs or fragments in URLs. Adjusted helper methods and mocks to simplify test logic and enhance readability.